[package]
name = "constance_port_std"
version = "0.0.1"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Simulation environment for running Constance on a hosted environment"
keywords = ["constance", "simulator"]
repository = "https://github.com/yvt/Constance"

[features]
# When testing, all optional features of Constance are enabled by default.
# To test a specific combination of features, do this:
#
#     cargo test -p constance_port_std -Zpackage-features \
#         --no-default-features --features constance_test_suite/system_time,...
#
default = ["constance_test_suite/full"]

[dependencies]
constance = { path = "../constance" }

env_logger = "0.7.1"
once_cell = "1.4.0"
log = "0.4.8"

[dependencies.try-lock]
# - “Make `TryLock::new` `const fn`”
#   <https://github.com/seanmonstar/try-lock/pull/2>
git = "https://github.com/yvt/try-lock.git"
rev = "cf06bc26a49d511bec22aa36fb68a882e8713d3b"

[dev-dependencies.constance_test_suite]
path = "../constance_test_suite"
default-features = false
features = ["tests_all"]

[target."cfg(unix)".dependencies]
libc = "0.2.71"
errno = "0.2.5"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.8", features = ["processthreadsapi"] }

[[bench]]
name = "test_suite"
harness = false

