[package]
name = "constance_support_rza1"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Supporting package for running Constance on Renesas RZ/A1"
categories = ["embedded", "no-std"]
keywords = ["constance", "arm", "renesas"]
repository = "https://github.com/yvt/Constance"

[features]
semver-exempt = [
    "embedded-hal",
    "rza1/cpg",
    "rza1/gpio",
    "rza1/scif",
    "nb",
]

[dependencies]
constance_port_arm = { version = "0.1.0", path = "../constance_port_arm" }
constance_portkit = { version = "0.1.0", path = "../constance_portkit" }
constance = { version = "0.1.0", path = "../constance" }

embedded-hal = { version = "0.2.4", optional = true }
rza1 = { version = "0.2.0", features = ["ostm"] }
nb = { version = "0.1.2", optional = true }

[package.metadata.docs.rs]
targets = []
