[package]
name = "constance_test_suite"
version = "0.0.1"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std", "development-tools::testing"]
description = "Test suite for Constance"
keywords = ["constance"]
repository = "https://github.com/yvt/Constance"

[features]
default = ["tests_all"]
tests_all = []
tests_selective = []

[dependencies]
constance = { path = "../constance" }

staticvec = { version = "0.10.2", default-features = false }
wyhash = { version = "0.3.0" }
log = { version = "0.4.8" }

[dependencies.try-lock]
# - “Make `TryLock::new` `const fn`”
#   <https://github.com/seanmonstar/try-lock/pull/2>
git = "https://github.com/yvt/try-lock.git"
rev = "cf06bc26a49d511bec22aa36fb68a882e8713d3b"

[dev-dependencies]
quickcheck_macros = "0.9.1"
env_logger = "0.7.1"
quickcheck = "0.9.2"
