[package]
name = "constance_test_suite"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std", "development-tools::testing"]
description = "Test suite for Constance"
keywords = ["constance"]
repository = "https://github.com/yvt/Constance"

[features]
default = ["tests_all", "full"]
tests_all = []
tests_selective = []

# Constance's optional features
full = [
    "priority_boost",
    "system_time",
]
priority_boost = ["constance/priority_boost"]
system_time = ["constance/system_time"]

[dependencies]
constance = { version = "0.1.0", path = "../constance" }

assert_matches = { version = "1.4.0" }
staticvec = { version = "0.10.5", default-features = false }
wyhash = { version = "0.3.0" }
log = { version = "0.4.8" }

[dev-dependencies]
quickcheck_macros = "0.9.1"
env_logger = "0.7.1"
quickcheck = "0.9.2"

[package.metadata.docs.rs]
targets = []
