[package]
name = "r3"
version = "0.1.3"
authors = ["yvt <i@yvt.jp>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Static RTOS API testing the limit of Rust's const eval and generics"
categories = ["embedded", "no-std"]
keywords = ["r3", "rtos"]
repository = "https://github.com/r3-os/r3"

[features]
default = []

# Enable the diagram rendering by svgbob
doc = ["svgbobdoc/enable"]

# Displays a "some features are disabled" warning in the documentation
# when disabled so that the user can know some items are missing because of
# that.
_full = []

[dependencies]
num-integer = { version = "0.1.42", default-features = false }
num-traits = { version = "0.2.11", default-features = false }
pin-utils = { version = "0.1.0" }
svgbobdoc = { version = "0.3.0-alpha.2" }
tokenlock = { version = "0.3.4", default-features = false }
arrayvec = { version = "0.7.1", default-features = false }
bitflags = { version = "1.2.1" }
chrono = { version = "0.4.13", optional = true, default-features = false }
either = { version = "1.6.1", default-features = false }
elain = { version = "0.3.0" }

[dev-dependencies]
quickcheck_macros = "1.0.0"
env_logger = "0.8.4"
quickcheck = "1.0.3"
log = "0.4.8"

[package.metadata.docs.rs]
all-features = true
targets = []
