[package]
name = "r3"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Static RTOS API testing the limit of Rust's const eval and generics"
categories = ["embedded", "no-std"]
keywords = ["r3", "rtos"]
repository = "https://github.com/r3-os/r3"

[features]
default = []

# Exposes `r3_core`'s features'
chrono_0p4 = ["r3_core/chrono_0p4"]

# Enable the diagram rendering by svgbob and other fancy stuff
doc = ["svgbobdoc/enable", "embed-doc-image", "r3_core/doc"]

# Displays a "some features are disabled" warning in the documentation
# when disabled so that the user can know some items are missing because of
# that.
_full = []

[dependencies]
stable_deref_trait = { version = "1.2.0", default-features = false }
embed-doc-image = { version = "0.1.4", optional = true }
svgbobdoc = { version = "0.3.0-alpha.4" }
r3_core = { version = "0.1.0", path = "../r3_core" }

[package.metadata.docs.rs]
all-features = true
targets = []
