[package]
name = "r3"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
R3-OS: Experimental static component-oriented RTOS for deeply embedded systems
"""
categories = ["embedded", "no-std"]
keywords = ["r3", "rtos"]
repository = "https://github.com/r3-os/r3"

[features]
default = []

sync = []

# Exposes `r3_core`'s features'
chrono_0p4 = ["r3_core/chrono_0p4"]

# Enable the diagram rendering by svgbob and other fancy stuff [ref:doc_feature]
doc = ["svgbobdoc/enable", "embed-doc-image", "r3_core/doc"]

# Displays a "some features are disabled" warning in the documentation
# when disabled so that the user can know some items are missing because of
# that.
_full = []

[dependencies]
stable_deref_trait = { version = "1.2.0", default-features = false }
embed-doc-image = { version = "0.1.4", optional = true }
svgbobdoc = { version = "0.3.0" }
macropol = { version = "0.1.2" }
r3_core = { version = "0.1.0", path = "../r3_core" }

[dev-dependencies]
r3_port_std = { path = "../r3_port_std" }
r3_kernel = { path = "../r3_kernel" }

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--html-in-header", "src/common.md"]  # [ref:doc_global_styling]
