[package]
name = "r3_port_arm"
version = "0.1.2"
authors = ["yvt <i@yvt.jp>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Arm-A port for R3"
categories = ["embedded", "no-std"]
keywords = ["r3", "arm"]
repository = "https://github.com/r3-os/r3"

[features]
preload-registers = []

[dependencies]
r3_portkit = { version = "0.1.0", path = "../r3_portkit" }
r3 = { version = "0.1.0", path = "../r3" }

tock-registers = { version = "0.7.0" }
memoffset = { version = "0.6.1", features = ["unstable_const"] }
r0 = { version = "1.0.0" }

[package.metadata.docs.rs]
targets = []
