[package]
name = "r3_port_arm"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Armv7-A port for the R3-OS original kernel"
categories = ["embedded", "no-std"]
keywords = ["r3", "arm"]
repository = "https://github.com/r3-os/r3"

[features]
preload-registers = []

# Used for documentation builds [ref:doc_feature]
doc = []

[dependencies]
r3_portkit = { version = "0.2.0", path = "../r3_portkit" }
r3_kernel = { version = "0.1.0", path = "../r3_kernel" }
r3_core = { version = "0.1.0", path = "../r3_core" }

tock-registers = { version = "0.7.0" }
memoffset = { version = "0.6.5", features = ["unstable_const"] }
macropol = { version = "0.1.2" }
r0 = { version = "1.0.0" }

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--html-in-header", "src/common.md"]  # [ref:doc_global_styling]
