[package]
name = "r3_port_arm"
version = "0.2.3"
description = "Armv7-A port for the R3-OS original kernel"
categories = ["embedded", "no-std"]
keywords = ["r3", "arm"]

edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
preload-registers = []

# Used for documentation builds [ref:doc_feature]
doc = []

[dependencies]
r3_core_ks = { workspace = true }
r3_portkit = { workspace = true }
r3_kernel = { workspace = true }

tock-registers = { version = "0.8.0" }
memoffset = { version = "0.6.5", features = ["unstable_const"] }
macropol = { version = "0.1.2" }
r0 = { version = "1.0.0" }

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--html-in-header", "src/common.md"]  # [ref:doc_global_styling]
