[package]
name = "r3_port_arm_m"
version = "0.1.1"
authors = ["yvt <i@yvt.jp>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cortex-M port for R3"
categories = ["embedded", "no-std"]
keywords = ["r3", "arm"]
repository = "https://github.com/yvt/r3"

[features]
preload-registers = []

[dependencies]
r3_portkit = { version = "0.1.1", path = "../r3_portkit" }
r3 = { version = "0.1.1", path = "../r3" }

memoffset = { version = "0.6.1", features = ["unstable_const"] }

# `cortex-m-rt` doesn't build on a hosted target. We don't want
# `cargo test --all` to fail because of this, so we put these in the
# target-specific section.
[target."cfg(target_os = \"none\")".dependencies]
cortex-m-rt = ">= 0.6.12, < 0.8.0"
cortex-m = ">= 0.6.2, < 0.8.0"

[package.metadata.docs.rs]
targets = []
