[package]
name = "r3_port_arm_m"
version = "0.3.1"
description = "Cortex-M port for the R3-OS original kernel"
categories = ["embedded", "no-std"]
keywords = ["r3", "arm"]

edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
preload-registers = []

# Used for documentation builds [ref:doc_feature]
doc = []

[dependencies]
r3_core_ks = { version = "0.1.0", path = "../r3_core", package = "r3_core" }
r3_portkit = { version = "0.2.0", path = "../r3_portkit" }
r3_kernel = { version = "0.1.0", path = "../r3_kernel" }

memoffset = { version = "0.6.5", features = ["unstable_const"] }

# `cortex-m-rt` doesn't build on a hosted target. We don't want
# `cargo test --all` to fail because of this, so we put these in the
# target-specific section.
[target."cfg(target_os = \"none\")".dependencies]
cortex-m-rt = ">= 0.6.12, < 0.8.0"
cortex-m = ">= 0.6.2, < 0.8.0"

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--html-in-header", "src/common.md"]  # [ref:doc_global_styling]
