[package]
name = "r3_port_arm_m_test_driver"
version = "0.0.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[features]
kernel_benchmarks = ["run"]
kernel_tests = ["run"]
run = [
    "r3",
    "r3_port_arm_m",
    "cortex-m",
    "cortex-m-rt",
    "log",
    "r3_test_suite",
]

# Only Raspberry Pico needs special support. `board-rp_pico` implies USB output,
# so it doesn't require `output-*`.
board-rp_pico = [
    "r3_support_rp2040",
]

# Other targets specify a generic output mechanism
output-rtt = [
    "panic-rtt-target",
    "rtt-target",
]
output-semihosting = [
    "cortex-m-semihosting",
    "panic-semihosting",
]

cpu-lock-by-basepri = []

[dependencies]
r3_support_rp2040 = { path = "../r3_support_rp2040", optional = true, features = ["semver-exempt"] }
r3_port_arm_m = { path = "../r3_port_arm_m", optional = true }
r3 = { path = "../r3", optional = true }

cortex-m-semihosting = { version = "0.3.5", optional = true }
panic-semihosting = { version = "0.5.3", optional = true }
panic-rtt-target = { version = "0.1.0", optional = true, features = ["cortex-m"] }
cortex-m-rt = { version = "0.6.12", optional = true, features = ["device"] }
rtt-target = { version = "0.2.0", optional = true, features = ["cortex-m"] }
cortex-m = { version = "0.6.3", optional = true, features = ["inline-asm"] }
log = { version = "0.4.8", optional = true }

[dependencies.r3_test_suite]
path = "../r3_test_suite"
default-features = false
features = [
    # compile the test case specified by `R3_TEST`
    "tests_selective",
    # enable all of the kernel optional features
    "full",
]
optional = true
